[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \data
)/
'''

[tool.isort]
profile = "black"
[tool.poetry]
name = "Project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
plotly = "^5.3.1"
sklearn = "^0.0"
streamlit = "^1.1.0"
requests = "^2.26.0"
importlib-resources = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
